--- a/config.yml
+++ b/config.yml
@@ -1,1 +1,5 @@
 letanyonechangegamemode: false
+summonwatchlist: [61, 62, 283, 285, 286]
+summonblacklist: [0]
+blockfornormals: [6, 7, 8, 9, 10, 11, 31, 27, 28, 29, 33, 34, 46, 49, 51, 52]
+blockfortrusted: [7, 46]
