--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>craftbukkit</artifactId>
-      <version>1.1-R5-SNAPSHOT</version>
+      <version>[1.2.3-R1.0,)</version>
       <type>jar</type>
     </dependency>
     <dependency>
