--- a/config.yml
+++ b/config.yml
@@ -3,3 +3,6 @@ summonblacklist: [0]
 blockfornormals: [6, 7, 8, 9, 10, 11, 31, 27, 28, 29, 33, 34, 46, 49, 51, 52]
 blockfortrusted: [7, 46]
 OMGFREEFLIGHT: false
+damage:
+  blockDamage: false
+  imitateAlpha: false
