--- a/plugin.yml
+++ b/plugin.yml
@@ -28,13 +28,20 @@ commands:
     usage: /more [stacks]
     permission: j2mc.fun.commands
     permission-message: You may not
+  pvp:
+    description: Enables/disables pvp, lists pvped users.
+    usage: /pvp <playername/list>
+    permission: j2mc.fun.admin.pvp
 permissions:
   j2mc.fun.commands:
     description: Gives access to fun commands.
   j2mc.fun.trusted:
     description: Trusted access
+  j2mc.fun.admin.pvp:
+    description: Whee
   j2mc.fun.admin:
     description: Admin access
     children:
       j2mc.fun.trusted: true
       j2mc.fun.commands: true
+      j2mc.fun.admin.pvp: true
