--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,10 @@
       <id>bukkit-repo</id>
       <url>http://repo.bukkit.org/content/groups/public</url>
     </repository>
+    <repository>
+      <id>sk89q-repo</id>
+      <url>http://maven.sk89q.com/repo/</url>
+    </repository>
     </repositories>
   <dependencies>
     <dependency>
@@ -33,6 +37,11 @@
       <artifactId>j2mc-core</artifactId>
       <version>1.0-SNAPSHOT</version>
       <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.sk89q</groupId>
+      <artifactId>worldedit</artifactId>
+      <version>[5.5,)</version>
     </dependency>
   </dependencies>
   
